k8s-rpi-apps-argocd-k/argocd-repo-server-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-repo-server
spec:
  template:
    spec:
      containers:
        - name: argocd-repo-server
          args:
            - /usr/local/bin/argocd-repo-server
        - name: avp-kustomize-helm-values
          command: [/var/run/argocd/argocd-cmp-server]
          image: quay.io/argoproj/argocd:v2.7.2
          securityContext:
            runAsNonRoot: true
            runAsUser: 999
          volumeMounts:
            - mountPath: /var/run/argocd
              name: var-files
            - mountPath: /home/argocd/cmp-server/plugins
              name: plugins
            - mountPath: /tmp
              name: tmp
            # Register plugins into sidecar
            - mountPath: /home/argocd/cmp-server/config/plugin.yaml
              subPath: avp-kustomize-helm-values.yaml
              name: cmp-plugin
            # Important: Mount tools into $PATH
            - name: custom-tools
              subPath: argocd-vault-plugin
              mountPath: /usr/local/bin/argocd-vault-plugin
        - name: avp-kustomize-helm
          command: [/var/run/argocd/argocd-cmp-server]
          image: quay.io/argoproj/argocd:v2.7.2
          securityContext:
            runAsNonRoot: true
            runAsUser: 999
          volumeMounts:
            - mountPath: /var/run/argocd
              name: var-files
            - mountPath: /home/argocd/cmp-server/plugins
              name: plugins
            - mountPath: /tmp
              name: tmp
            # Register plugins into sidecar
            - mountPath: /home/argocd/cmp-server/config/plugin.yaml
              subPath: avp-kustomize-helm.yaml
              name: cmp-plugin
            # Important: Mount tools into $PATH
            - name: custom-tools
              subPath: argocd-vault-plugin
              mountPath: /usr/local/bin/argocd-vault-plugin
        - name: avp-kustomize
          command: [/var/run/argocd/argocd-cmp-server]
          image: quay.io/argoproj/argocd:v2.7.2
          securityContext:
            runAsNonRoot: true
            runAsUser: 999
          volumeMounts:
            - mountPath: /var/run/argocd
              name: var-files
            - mountPath: /home/argocd/cmp-server/plugins
              name: plugins
            - mountPath: /tmp
              name: tmp
            # Register plugins into sidecar
            - mountPath: /home/argocd/cmp-server/config/plugin.yaml
              subPath: avp-kustomize.yaml
              name: cmp-plugin
            # Important: Mount tools into $PATH
            - name: custom-tools
              subPath: argocd-vault-plugin
              mountPath: /usr/local/bin/argocd-vault-plugin
        - name: avp
          command: [/var/run/argocd/argocd-cmp-server]
          image: quay.io/argoproj/argocd:v2.7.2
          securityContext:
            runAsNonRoot: true
            runAsUser: 999
          volumeMounts:
            - mountPath: /var/run/argocd
              name: var-files
            - mountPath: /home/argocd/cmp-server/plugins
              name: plugins
            - mountPath: /tmp
              name: tmp
            # Register plugins into sidecar
            - mountPath: /home/argocd/cmp-server/config/plugin.yaml
              subPath: avp.yaml
              name: cmp-plugin
            # Important: Mount tools into $PATH
            - name: custom-tools
              subPath: argocd-vault-plugin
              mountPath: /usr/local/bin/argocd-vault-plugin
      volumes:
      - name: custom-tools
        emptyDir: {}
      - configMap:
          name: cmp-plugin
        name: cmp-plugin
      - name: download-script
        configMap:
          name: argocd-download-plugin
          defaultMode: 0777        
      # nodeSelector:
      #   beta.kubernetes.io/arch: arm64        
      automountServiceAccountToken: true
