k8s-rpi-apps-argocd-k/argocd-server-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-server
spec:
  template:
    spec:
      containers:
      - name: argocd-server
        command: ["argocd-server"]
        args: 
          - --insecure
          - --staticassets
          - /shared/app
          - '--redis'
          - argocd-redis:6379
