k8s-rpi-apps-argocd-k/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  annotations:
    avp.kubernetes.io/path: "k8secrets/ingresses"
spec:
  ingressClassName: nginx
  rules:
    - host: <argocdhostname>.<domainname>
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: argocd-server
              port:
                number: 80
